// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerDiamond matches the snapshot 1`] = `
<svg
  fill="currentColor"
  style={
    Object {
      "color": "#fff",
      "overflow": "visible",
      "width": "100px",
    }
  }
  viewBox="0 0 96 96"
>
  <circle
    cx={3}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={18}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={18}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={18}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={33}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={33}
    cy={18}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={33}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={33}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={33}
    cy={78}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={48}
    cy={3}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={48}
    cy={18}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={48}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={48}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={48}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={48}
    cy={78}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={48}
    cy={93}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={63}
    cy={18}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={63}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={63}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={63}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={63}
    cy={78}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={78}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={78}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={78}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <circle
    cx={93}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={1.25}
  />
  <g
    style={
      Object {
        "animation": "spinners-react-diamond 14s steps(2, end) infinite",
      }
    }
  >
    <circle
      cx={3}
      cy={48}
      r={1.75}
    />
    <circle
      cx={18}
      cy={33}
      r={1.75}
    />
    <circle
      cx={18}
      cy={48}
      r={1.75}
    />
    <circle
      cx={18}
      cy={63}
      r={1.75}
    />
    <circle
      cx={33}
      cy={48}
      r={1.75}
    />
  </g>
</svg>
`;

exports[`SpinnerDiamond matches the snapshot with default props 1`] = `
<svg
  fill="currentColor"
  style={
    Object {
      "color": "#38ad48",
      "overflow": "visible",
      "width": "50px",
    }
  }
  viewBox="0 0 96 96"
>
  <circle
    cx={3}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={18}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={18}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={18}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={33}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={33}
    cy={18}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={33}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={33}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={33}
    cy={78}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={48}
    cy={3}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={48}
    cy={18}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={48}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={48}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={48}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={48}
    cy={78}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={48}
    cy={93}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={63}
    cy={18}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={63}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={63}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={63}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={63}
    cy={78}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={78}
    cy={33}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={78}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={78}
    cy={63}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <circle
    cx={93}
    cy={48}
    fill="rgba(0,0,0,0.44)"
    r={2.5}
  />
  <g
    style={
      Object {
        "animation": "spinners-react-diamond 1.4s steps(2, end) infinite",
      }
    }
  >
    <circle
      cx={3}
      cy={48}
      r={3.5}
    />
    <circle
      cx={18}
      cy={33}
      r={3.5}
    />
    <circle
      cx={18}
      cy={48}
      r={3.5}
    />
    <circle
      cx={18}
      cy={63}
      r={3.5}
    />
    <circle
      cx={33}
      cy={48}
      r={3.5}
    />
  </g>
</svg>
`;
